# cdc-with-kaggle

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: config.json  connection_and_install_dataset.py  connection_s3.py  create_cdc.py  example.env  pipeline.py
src/data/cdc/: README.md  clientes_CDC__2025-07-11_16-49_visualizer.csv  transacao_produto_CDC__2025-07-11_16-49_visualizer.csv  transacoes_CDC__2025-07-11_16-49_visualizer.csv
src/data/last/: clientes.csv
