[tool.poetry]
name = "create-cdc-with-kaggle"
version = "0.1.0"
description = ""
authors = ["Yan Robim <yanrobim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
kaggle = "^1.7.4.5"
pandas = "^2.3.0"
dotenv = "^0.9.9"
boto3 = "^1.39.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
